--- a/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-location/edit-employee-location.component.scss
+++ b/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-location/edit-employee-location.component.scss
@@ -12,4 +12,14 @@
       }
     }
   }
+
+  ::ng-deep {
+    nb-card {
+      padding: 1.6rem;
+
+      nb-card-body {
+        margin: 0 !important;
+      }
+    }
+  }
 }
